--- a/formulari.html
+++ b/formulari.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1>Ketu eshte nje formular.</h1>
         <form>
             Emri:
             <div>
