--- a/thefirstwebsite.html
+++ b/thefirstwebsite.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="G:\My Drive\thewebsitdesign.css">
 <body> 
+    <h1><strong><i>Prova 1, 2, 3, prova!</i></strong></h1>
     <h1 id="titulli"><b>Kjo eshte faqja ku une do te <em>praktikoj</em> cdo gje qe do te mesoj ne kursin CS50, derisa te shikoj veten te afte qe te bej faqe internetin vete.</b></h1>
     <h1>Shkrimi me i trashe!</h1>
     <h2>Shkrimi me pak i trashe!</h2>
