--- a/formulari.html
+++ b/formulari.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1>Ketu eshte nje formular.</h1>
         <form>
             Emri:
             <div>
@@ -45,7 +46,17 @@
             <div>
                 <input name="password" type="password" placeholder="qwertyuiop">
             </div>
-            <input id="id" type="submit">       
+            Jeni fans i Naruto Shippiden?
+            <div>
+                <input name="options" list="options" placeholder="Yes or No">
+                <datalist id="options">
+                    <option value="Yes">
+                    <option value="No">
+           </div>
+            <input id="id" type="submit">     
+        <h1>Mos harroni te shtypni submit.
+            Per me shume vizitoni thefirstwebsite.com.
+        </h1>  
         </form>
     </body>
 </html>
