--- a/formulari.html
+++ b/formulari.html
@@ -56,7 +56,12 @@
             <input id="id" type="submit">     
         <h1>Mos harroni te shtypni submit.
             Per me shume vizitoni thefirstwebsite.com.
-        </h1>  
+        </h1>
+        <h1>Pasi te plotesoni formularin,
+            <a href="https://www.edx.org">klikoni ketu</a>
+            per te mesuar me shume rreth programimit,
+            dhe jo vetem.
+        </h1>
         </form>
     </body>
 </html>
