--- a/formulari.html
+++ b/formulari.html
@@ -54,7 +54,7 @@
                     <option value="No">
            </div>
             <input id="id" type="submit">     
-        <h1 style="color: red">Mos harroni te shtypni submit.
+        <h1 style="font-family: Arial;">Mos harroni te shtypni submit.
             Per me shume vizitoni thefirstwebsite.com.
         </h1>
         <h1>Pasi te plotesoni formularin,
